--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ html {
 body {
     width: 100%;
     height: 100%;
-    background: url("/assets/sitebg3.jpg") no-repeat top fixed;
+    background: url("../assets/sitebg3.jpg") no-repeat top fixed;
     background-size: cover;
 }
 
