--- a/styles/style.css
+++ b/styles/style.css
@@ -26,13 +26,15 @@ html {
     font-size: 10px;
     font-family: 'Poppins', sans-serif;
     color: var(--clr-light-grey);
+    overflow-x: hidden;
 }
 
 body {
     width: 100%;
-    height: 100%;
+    height: auto;
     background: url("../assets/sitebg3.jpg") no-repeat top fixed;
     background-size: cover;
+    /* min-width: 100%; */
 }
 
 a {
@@ -558,7 +560,7 @@ header {
     text-align: center;
     background: #000;
     padding: 2rem 0;
-    position: relative;
+    position: absolute;
     color: var(--clr-purple);
 }
 
